--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
     "antd": "^3.11.2",
     "babel-plugin-import": "^1.11.0",
     "dva": "^2.4.1",
@@ -15,6 +17,7 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
     "babel-plugin-dva-hmr": "^0.3.2",
     "cross-env": "^5.2.0",
     "eslint": "^4.14.0",
@@ -25,6 +28,7 @@
     "eslint-plugin-react": "^7.1.0",
     "husky": "^0.12.0",
     "redbox-react": "^1.4.3",
-    "roadhog": "^2.0.0"
+    "roadhog": "^2.0.0",
+    "source-map-loader": "^0.2.4"
   }
 }
